[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^0.30.0"
flask-marshmallow = "^1.1.0"
mysqlclient = "^2.2.1"
pyjwt = "^2.8.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
